# vicore-mockup

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ANALYSE_STATIQUE.md  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  DOCUMENTATION_RETRO.md  PLAN_CORRECTION.md  README.md  VICORE_Rapport_Complet.docx  pyproject.toml  requirements.txt  vercel.json
PROJET_VICORE_V2/: 00_PLAN_PROJET.md
PROJET_VICORE_V2/01_SPECIFICATIONS/: 01_SRS_Specification_Exigences.md  02_SFG_Specification_Fonctionnelle.md  03_STB_Specification_Technique.md  04_DAT_Dossier_Architecture.md  05_DCD_Dossier_Conception_Detaillee.md
PROJET_VICORE_V2/02_MOCKUPS/: 00_alerts_dashboard.html  01_login.html  02_system_view.html  03_car_view.html  04_historique_ressort.html  05_audit_trail.html  06_rapports.html  index.html
PROJET_VICORE_V2/02_MOCKUPS/css/: style.css
eurotunnel_web/: .gitignore  How to run in VSCode terminal.txt  README.md  app.py  common_consts.py  confidence_levels.py  db_iface.py  display_name_iface.py  generate_test_database.py  missing_spring_endpoints.py  redis_web.py  rename_file.py  requirement.txt  system_endpoints.py  train_pass_endpoints.py  user_management.py  version.py  wagon_status.py
eurotunnel_web/img_dev/: no-img.xcf  unknown-icon.xcf
eurotunnel_web/models/: display_names_model.py  user.py
eurotunnel_web/static/css/: eurotunnel_web.css
eurotunnel_web/templates/: authorised_users_base.html  base.html  carview.html  login.html  nodata.html  systemview.html  test.html  vue_error_alert.html
scripts/: fix_code_quality.ps1  fix_code_quality.sh  generate_report.py  setup.ps1  setup.sh  test_flask_app.py  test_imports.py
tests/integration/: test_dbiface.py
(+7 files in other folders)
